examples/test/testpolicy8042.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8042
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key10: value19
      key30: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
          key13: value8
          key28: value49
      podSelector:
        matchLabels:
          key40: value48
          key35: value11
